# Simplex_algorithm

./: Cargo.toml  index.html
graph_renderer/: Cargo.toml
graph_renderer/src/: graph.rs  graph_2d.rs  graph_nd.rs  lib.rs  node_2d.rs  node_nd.rs
src/: app.rs  lib.rs  main.rs  simplex.rs
